2007-11-12  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_design/print_layouts/canvas_print_layout.cc:
	fill_with_data(): Do not try to get data for fields that were 
	not yet chosen.

2007-11-09  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_design/print_layouts/Makefile.am:
	* glom/mode_design/print_layouts/action_layout_item.cc:
	* glom/mode_design/print_layouts/action_layout_item.h:
	* glom/mode_design/print_layouts/window_print_layout_edit.cc:
	* glom/mode_design/print_layouts/window_print_layout_edit.h:
	Added a toolbar whose items can be dragged to the canvas.
	It is not working perfectly and it is not pretty, but it is a 
	start.

2007-11-08  Murray Cumming  <murrayc@murrayc.com>

	* glom/glom_developer.glade:
	* glom/mode_design/print_layouts/window_print_layout_edit.cc:
	* glom/mode_design/print_layouts/window_print_layout_edit.h:
	Added an undockable vertical toolbar to replace the Insert menu. 
	It is not very attractive, and it needs to work as a drag source, 
	rather than being clickable items. 

2007-11-08  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_design/print_layouts/canvas_print_layout.cc:
	* glom/mode_design/print_layouts/canvas_print_layout.h:
	add_layout_group(): added an is_top_level parameter, so we can 
	avoid adding a canvas item for the canvas's own layout group.

2007-11-08  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/data_structure/print_layout.cc: Copy constructor 
	and operator=(): Copy the page_setup.
	* glom/mode_design/print_layouts/canvas_print_layout.cc:
	get_print_layout(), set_print_layout(): Actually load/save the 
	page setup.

2007-11-08  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_design/print_layouts/canvas_print_layout.cc:
	fill_with_data(): Don't crash if no fields are on the layout.
	* glom/printoperation_printlayout.cc:
	* glom/printoperation_printlayout.h: Handle the paginate 
	signal, though this probably requires the GTK+ patch in 
	bug #345345.
